# silmari-writer

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  pyproject.toml  tdd_plan_implement.py
.beads/: README.md  config.yaml  dolt-monitor.pid  dolt-server.activity  issues.jsonl  last-touched  metadata.json
.beads/backup/: backup_state.json  dependencies.jsonl  events.jsonl  issues.jsonl
.claude/: settings.json
.claude/commands/: debug.md  extract_tlaplus_model.md  implement_plan_with_checkpoint_worktree.md  implement_plan_with_checkpoints.md  implement_plan_workgroup.md
.github/workflows/: ci.yml
.specstory/: .project.json
backend/: app.py  requirements.txt
backend/tests/: test_files.py  test_generation.py
frontend/: .env.example  .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  vitest.config.ts
frontend/.beads/: dolt-server.activity  metadata.json
frontend/e2e/: conversation-flow.spec.ts  generate-draft.spec.ts
frontend/test/: setup.ts
paths/approve-draft-and-transition-to-finalize/: history.jsonl  v1.md
paths/approve-reviewed-content-and-advance-workflow/: history.jsonl  v1.md
paths/approve-voice-session-and-persist-story-record/: history.jsonl
paths/backend-say-event-triggers-voice-and-transcript/: history.jsonl
specs/: ARCHITECTURE.md  SPECS.md  draft-generation-review.md  finalize-export-sms.md  metrics-analytics.md  session-initialization.md  slot-filling-verification.md  voice-assisted-session-ui-ux.md  voice-loop.md  voice-recall-story-selection.md
templates/: README.md
(+1222 files in other folders)
